# cryptocurrency_prediction

./: .gitattributes  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  app.py  converter.py  coret-coretan.ipynb  dev.requirements.txt  go.mod  index.html  main.py  pyproject.toml  requirements.txt  scraper.go  training.py  vercel.json
datasets/: ADA-USD.csv  APT21794-USD.csv  AR-USD.csv  ARB11841-USD.csv  ATOM-USD.csv  AVAX-USD.csv  BCH-USD.csv  BNB-USD.csv  BTC-USD.csv  BTCB-USD.csv  CRO-USD.csv  DAI-USD.csv  DOGE-USD.csv  DOT-USD.csv  EETH-USD.csv  ETC-USD.csv  ETH-USD.csv  EZETH-USD.csv  FIL-USD.csv  HBAR-USD.csv  ICP-USD.csv  IMX10603-USD.csv  KAS-USD.csv  LEO-USD.csv  LINK-USD.csv  LTC-USD.csv  MATIC-USD.csv  MNT27075-USD.csv  NEAR-USD.csv  PEPE24478-USD.csv  RNDR-USD.csv  SHIB-USD.csv  SOL-USD.csv  STETH-USD.csv  TON11419-USD.csv  TRX-USD.csv  UNI7083-USD.csv  USDC-USD.csv  USDE29470-USD.csv  USDT-USD.csv  (+10 more)
diagram/: cryptocurrency_prediction.ai
models/: ADA-USD.keras  APT21794-USD.keras  AR-USD.keras  ARB11841-USD.keras  ATOM-USD.keras  AVAX-USD.keras  BCH-USD.keras  BNB-USD.keras  BTC-USD.keras  BTCB-USD.keras  CRO-USD.keras  DAI-USD.keras  DOGE-USD.keras  DOT-USD.keras  EETH-USD.keras  ETC-USD.keras  ETH-USD.keras  EZETH-USD.keras  FIL-USD.keras  HBAR-USD.keras  ICP-USD.keras  IMX10603-USD.keras  KAS-USD.keras  LEO-USD.keras  LINK-USD.keras  LTC-USD.keras  MATIC-USD.keras  MNT27075-USD.keras  NEAR-USD.keras  PEPE24478-USD.keras  RNDR-USD.keras  SHIB-USD.keras  SOL-USD.keras  STETH-USD.keras  TON11419-USD.keras  TRX-USD.keras  UNI7083-USD.keras  (+13 more)
(+163 files in other folders)
